@@ -14,6 +14,7 @@ import uk.gov.hmcts.reform.civil.enums.CaseState;
 import uk.gov.hmcts.reform.civil.enums.YesOrNo;
 import uk.gov.hmcts.reform.civil.enums.dq.GeneralApplicationTypes;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
+import uk.gov.hmcts.reform.civil.model.BusinessProcess;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.GARespondentRepresentative;
 import uk.gov.hmcts.reform.civil.model.LocationRefData;
@@ -24,7 +25,6 @@ import uk.gov.hmcts.reform.civil.model.genapplication.GAHearingDetails;
 import uk.gov.hmcts.reform.civil.model.genapplication.GARespondentResponse;
 import uk.gov.hmcts.reform.civil.model.genapplication.GAUnavailabilityDates;
 import uk.gov.hmcts.reform.civil.service.GeneralAppLocationRefDataService;
-import uk.gov.hmcts.reform.civil.service.ParentCaseUpdateHelper;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 
@@ -33,6 +33,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -47,8 +48,6 @@ import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.MID;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESPOND_TO_APPLICATION;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.AWAITING_RESPONDENT_RESPONSE;
 import static uk.gov.hmcts.reform.civil.enums.GADebtorPaymentPlanGAspec.PAYFULL;
 import static uk.gov.hmcts.reform.civil.enums.GARespondentDebtorOfferOptionsGAspec.ACCEPT;
 import static uk.gov.hmcts.reform.civil.enums.GARespondentDebtorOfferOptionsGAspec.DECLINE;
@@ -56,7 +55,6 @@ import static uk.gov.hmcts.reform.civil.enums.YesOrNo.NO;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
 import static uk.gov.hmcts.reform.civil.model.common.DynamicList.fromList;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
-import static uk.gov.hmcts.reform.civil.utils.RespondentsResponsesUtil.isRespondentsResponseSatisfied;
 
 @Service
 @RequiredArgsConstructor
@@ -64,7 +62,6 @@ public class RespondToApplicationHandler extends CallbackHandler {
 
     private final ObjectMapper objectMapper;
     private final CaseDetailsConverter caseDetailsConverter;
-    private final ParentCaseUpdateHelper parentCaseUpdateHelper;
     private final IdamClient idamClient;
     private final GeneralAppLocationRefDataService locationRefDataService;
 
@@ -136,11 +133,10 @@ public class RespondToApplicationHandler extends CallbackHandler {
         CaseData caseData = callbackParams.getCaseData();
         ArrayList<String> errors = new ArrayList<>();
         if (ofNullable(caseData.getGaRespondentDebtorOffer()).isPresent()
-            && caseData.getGaRespondentDebtorOffer().getRespondentDebtorOffer().equals(DECLINE)) {
-            if (caseData.getGaRespondentDebtorOffer().getPaymentPlan().equals(PAYFULL)
-                && !now().isBefore(caseData.getGaRespondentDebtorOffer().getPaymentSetDate())) {
-                errors.add(PAYMENT_DATE_CANNOT_BE_IN_PAST);
-            }
+            && caseData.getGaRespondentDebtorOffer().getRespondentDebtorOffer().equals(DECLINE)
+            && caseData.getGaRespondentDebtorOffer().getPaymentPlan().equals(PAYFULL)
+            && !now().isBefore(caseData.getGaRespondentDebtorOffer().getPaymentSetDate())) {
+            errors.add(PAYMENT_DATE_CANNOT_BE_IN_PAST);
         }
 
         return AboutToStartOrSubmitCallbackResponse.builder()
@@ -151,8 +147,7 @@ public class RespondToApplicationHandler extends CallbackHandler {
     private DynamicList getLocationsFromList(final List<LocationRefData> locations) {
         return fromList(locations.stream().map(location -> new StringBuilder().append(location.getSiteName())
                 .append(" - ").append(location.getCourtAddress())
-                .append(" - ").append(location.getPostcode()).toString())
-                            .collect(Collectors.toList()));
+                .append(" - ").append(location.getPostcode()).toString()).toList());
     }
 
     @Override
@@ -224,31 +219,44 @@ public class RespondToApplicationHandler extends CallbackHandler {
                                     List<Element<GAUnavailabilityDates>> datesUnavailableList) {
 
         if (YES.equals(isTrialScheduled)) {
-            if (trialDateFrom != null) {
-                if (trialDateTo != null && trialDateTo.isBefore(trialDateFrom)) {
-                    errors.add(INVALID_TRIAL_DATE_RANGE);
-                } else if (trialDateFrom.isBefore(LocalDate.now())) {
-                    errors.add(INVALID_TRAIL_DATE_FROM_BEFORE_TODAY);
-                }
-            } else {
-                errors.add(TRIAL_DATE_FROM_REQUIRED);
-            }
+            checkTrialScheduled(errors,
+                    trialDateFrom,
+                    trialDateTo);
         }
 
         if (YES.equals(isUnavailable)) {
-            if (isEmpty(datesUnavailableList)) {
-                errors.add(UNAVAILABLE_DATE_RANGE_MISSING);
-            } else {
-                for (Element<GAUnavailabilityDates> dateRange : datesUnavailableList) {
-                    LocalDate dateFrom = dateRange.getValue().getUnavailableTrialDateFrom();
-                    LocalDate dateTo = dateRange.getValue().getUnavailableTrialDateTo();
-                    if (dateFrom == null) {
-                        errors.add(UNAVAILABLE_FROM_MUST_BE_PROVIDED);
-                    } else if (dateTo != null && dateTo.isBefore(dateFrom)) {
-                        errors.add(INVALID_UNAVAILABILITY_RANGE);
-                    } else if (dateFrom.isBefore(LocalDate.now())) {
-                        errors.add(INVALID_UNAVAILABLE_DATE_FROM_BEFORE_TODAY);
-                    }
+            checkUnavailable(errors, datesUnavailableList);
+        }
+    }
+
+    private void checkTrialScheduled(List<String> errors,
+                                     LocalDate trialDateFrom,
+                                     LocalDate trialDateTo) {
+        if (trialDateFrom != null) {
+            if (trialDateTo != null && trialDateTo.isBefore(trialDateFrom)) {
+                errors.add(INVALID_TRIAL_DATE_RANGE);
+            } else if (trialDateFrom.isBefore(LocalDate.now())) {
+                errors.add(INVALID_TRAIL_DATE_FROM_BEFORE_TODAY);
+            }
+        } else {
+            errors.add(TRIAL_DATE_FROM_REQUIRED);
+        }
+    }
+
+    private void checkUnavailable(List<String> errors,
+                                  List<Element<GAUnavailabilityDates>> datesUnavailableList) {
+        if (isEmpty(datesUnavailableList)) {
+            errors.add(UNAVAILABLE_DATE_RANGE_MISSING);
+        } else {
+            for (Element<GAUnavailabilityDates> dateRange : datesUnavailableList) {
+                LocalDate dateFrom = dateRange.getValue().getUnavailableTrialDateFrom();
+                LocalDate dateTo = dateRange.getValue().getUnavailableTrialDateTo();
+                if (dateFrom == null) {
+                    errors.add(UNAVAILABLE_FROM_MUST_BE_PROVIDED);
+                } else if (dateTo != null && dateTo.isBefore(dateFrom)) {
+                    errors.add(INVALID_UNAVAILABILITY_RANGE);
+                } else if (dateFrom.isBefore(LocalDate.now())) {
+                    errors.add(INVALID_UNAVAILABLE_DATE_FROM_BEFORE_TODAY);
                 }
             }
         }
@@ -277,15 +285,11 @@ public class RespondToApplicationHandler extends CallbackHandler {
         caseDataBuilder.respondentsResponses(respondentsResponses);
         caseDataBuilder.hearingDetailsResp(populateHearingDetailsResp(caseData));
         caseDataBuilder.generalAppRespondent1Representative(GARespondentRepresentative.builder().build());
+        caseDataBuilder.businessProcess(BusinessProcess.ready(RESPOND_TO_APPLICATION)).build();
+
         CaseData updatedCaseData = caseDataBuilder.build();
 
-        CaseState newState = isRespondentsResponseSatisfied(caseData, updatedCaseData)
-            ? APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION
-            : AWAITING_RESPONDENT_RESPONSE;
-        parentCaseUpdateHelper.updateParentWithGAState(caseData, newState.getDisplayedValue());
-
         return AboutToStartOrSubmitCallbackResponse.builder()
-            .state(newState.toString())
             .data(updatedCaseData.toMap(objectMapper))
             .build();
     }
@@ -323,21 +327,21 @@ public class RespondToApplicationHandler extends CallbackHandler {
 
     private GARespondentResponse buildResponse(CaseData caseData, UserDetails userDetails) {
 
-        YesOrNo generalAppDebtorRespondentRep = NO;
-        if (caseData.getGeneralAppType().getTypes().contains(GeneralApplicationTypes.VARY_JUDGEMENT)
-            && caseData.getParentClaimantIsApplicant().equals(NO)) {
-
-            if (ofNullable(caseData.getGaRespondentDebtorOffer()).isPresent()
-                && caseData.getGaRespondentDebtorOffer().getRespondentDebtorOffer().equals(ACCEPT)) {
-                generalAppDebtorRespondentRep = YES;
-            }
+        YesOrNo generalOther = NO;
+        if (Objects.nonNull(caseData.getGeneralAppConsentOrder())) {
+            generalOther = caseData.getGaRespondentConsent();
+        } else if (caseData.getGeneralAppType().getTypes().contains(GeneralApplicationTypes.VARY_JUDGEMENT)
+            && caseData.getParentClaimantIsApplicant().equals(NO)
+            && ofNullable(caseData.getGaRespondentDebtorOffer()).isPresent()
+            && caseData.getGaRespondentDebtorOffer().getRespondentDebtorOffer().equals(ACCEPT)) {
+            generalOther = YES;
         }
 
         GARespondentResponse.GARespondentResponseBuilder gaRespondentResponseBuilder = GARespondentResponse.builder();
 
         gaRespondentResponseBuilder
             .generalAppRespondent1Representative(caseData.getGeneralAppRespondent1Representative() == null
-                                                     ? generalAppDebtorRespondentRep
+                                                     ? generalOther
                                                      : caseData.getGeneralAppRespondent1Representative()
                 .getGeneralAppRespondent1Representative())
             .gaHearingDetails(populateHearingDetailsResp(caseData))
